added multilayer filtering for browsing doctors